[package]
name = "llm-mod-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.94"
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
serenity = { version = "0.12.4", default-features = false, features = ["rustls_backend", "builder", "client", "gateway", "http", "model", "collector"] }
tracing = "0.1.41"
unicode-segmentation = "1.12.0"